fix crash on ctrl+shift+left / delete word left

part/tests/bug286887.* contains a unit test for this.

BUG: 286887